converted to manual stroop; also preloading false font stimuli

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Stroop Control</title>
 		<!-- pull in the jsPsych libraries we need -->
 		<script src="jspsych-6.1.0/jspsych.js"></script>
-		<script src="jspsych-6.1.0/plugins/jspsych-image-audio-response.js"></script>
+		<script src="jspsych-6.1.0/plugins/jspsych-image-keyboard-response.js"></script>
 		<script src="jspsych-6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
 		<!-- pull in the actual experiment -->
 		<script src="exp.js"></script>
@@ -25,7 +25,7 @@
 		/* initialise experiment */
 		jsPsych.init({
 			timeline: timeline,
-			preload_images: stroop_image_paths,
+			preload_images: [stroop_image_paths, falsefont_image_paths],
 			on_finish: function(){
 				jsPsych.data.displayData();
 			}
