--- a/jatos.html
+++ b/jatos.html
@@ -10,6 +10,8 @@
         <script src="jspsych-6.1.0/plugins/jspsych-resize.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-image-keyboard-response.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
+        <!-- generate a PID from prolific (or set one) -->
+        <script>var PID = 999;</script>
         <!-- pull in the actual experiment -->
         <script src="exp.js"></script>
         <!-- pull in the styling -->
