make exp.js into a function, and call it appropriately in the html documents; delete old block shuffling code

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
         <script src="jspsych-6.1.0/plugins/jspsych-resize.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-image-keyboard-response.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
-        <!-- generate PID (we can pull this from JATOS, but when running in browser, we just put it here) -->
-        <script>var PID = 999;</script>
-        <!-- pull in the actual experiment -->
+        <!-- pull in the experiment maker function -->
         <script src="exp.js"></script>
         <!-- pull in the styling -->
         <link rel="stylesheet" href="jspsych-6.1.0/css/jspsych.css"></link>
@@ -19,6 +17,8 @@
     <body></body>
     <script>
 
+        // needs this to generate the experiment
+        var PID = 999;
 
         /* 
          * the experiment script in exp.js produces the variables
@@ -29,8 +29,8 @@
 
         /* initialise experiment */
         jsPsych.init({
-            timeline: timeline,
-            preload_images: [stroop_image_paths, falsefont_image_paths,oned_image_paths],
+            timeline: make_experiment(PID),
+            preload_images: make_experiment(PID,"images"),
             on_finish: function(){
                 jsPsych.data.displayData();
             }
