--- a/jatos.html
+++ b/jatos.html
@@ -28,9 +28,9 @@
 
         /* initialise experiment */
         jatos.onLoad(function() {
-            // need to generate PIDs from batch session data
-            //var PID = 1;
 
+            // to test, just set the PID yourself (0-23, although if you go 1-24 it will set 24 to 0, and above that will use the modulus after remainder)
+            // var PID = 1;
             var num_conditions = 24;
             var num_condition_repeats = 1;
             // despite the fail condition in the code from the documentation,
