--- a/jatos.html
+++ b/jatos.html
@@ -32,7 +32,7 @@
             // to test, just set the id_number yourself (0-23, although if you go 1-24 it will set 24 to 0, and above that will use the modulus after remainder - allows you to use this as a participant id)
             // var id_number = 1;
             var num_conditions = 24;
-            var num_condition_repeats = 1;
+            var num_condition_repeats = 3;
             // despite the fail condition in the code from the documentation,
             // you have to run this once and have it crash before the conditions
             // are generated. it works after that
@@ -48,7 +48,11 @@
                 },
                 on_finish: function() {
                     var resultJson = jsPsych.data.get().json();
-                    jatos.submitResultData(resultJson, jatos.startNextComponent);
+                    jatos.submitResultData(resultJson, jatos.startNextComponent)
+                    .then(jatos.endStudyAjax)
+                    .then(() => {
+                        window.location.href = 'https://app.prolific.co/submissions/complete?cc=8D08D474'
+                    });
                 }
             });
         });
