add consent form

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
         <!-- pull in the jsPsych libraries we need -->
         <script src="jspsych-6.1.0/jspsych.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-call-function.js"></script>
+        <script src="jspsych-6.1.0/plugins/jspsych-instructions.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-resize.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-image-keyboard-response.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
         <!-- pull in the experiment maker function 'make_experiment' -->
         <script src="exp.js"></script>
+        <!-- pull in the consent function -->
+        <script src="consent.js"></script>
         <!-- pull in the styling -->
         <link rel="stylesheet" href="jspsych-6.1.0/css/jspsych.css"></link>
         <style></style>
