add demographics; add both consent and demographics to jatos script

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
         <script src="jspsych-6.1.0/jspsych.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-call-function.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-instructions.js"></script>
+        <script src="jspsych-6.1.0/plugins/jspsych-survey-text.js"></script>
+        <script src="jspsych-6.1.0/plugins/jspsych-survey-multi-choice.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-resize.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-image-keyboard-response.js"></script>
         <script src="jspsych-6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
         <!-- pull in the experiment maker function 'make_experiment' -->
         <script src="exp.js"></script>
-        <!-- pull in the consent function -->
-        <script src="consent.js"></script>
+        <!-- pull in the preexperiment functions -->
+        <script src="tools/consent.js"></script>
+        <script src="tools/demographics.js"></script>
         <!-- pull in the styling -->
         <link rel="stylesheet" href="jspsych-6.1.0/css/jspsych.css"></link>
         <style></style>
