add overflow to jatos.html

--- a/jatos.html
+++ b/jatos.html
@@ -20,7 +20,11 @@
         <script src="tools/demographics.js"></script>
         <!-- pull in the styling -->
         <link rel="stylesheet" href="jspsych-6.1.0/css/jspsych.css"></link>
-        <style></style>
+        <style>
+            #jspsych-image-keyboard-response-stimulus {
+                overflow: visible !important;
+            }
+        </style>
     </head>
     <body></body>
     <script>
